More functionality in the bearer token area. Added the login and validate flow and from that the other methods being available. This will need to be tested to verify all is good.
